<resources>
    <string name="app_name">GeoQuiz</string>


    <!-- Quiz Activity Fields -->
    <string name="question_text">Is Canaberra the capital of Australia?</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="cheat_button">Cheat?</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREV</string>
    <string name="warning_text">You sure?</string>
    <string name="show_answer_button">Show Answer</string>


    <!-- Toast Messages -->
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="judgement_toast"></string>


    <!-- Accessibility Content Descriptions -->
    <string name="access_next">Next</string>
    <string name="access_prev">Previous</string>


    <!-- Question Bank -->
    <string name="question_one">Canberra is the capital of Australia.</string>
    <string name="question_two">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_three">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_four">The source of the Nile River is in Egypt.</string>
    <string name="question_five">The Amazon River is the longest river in the Americas.</string>
    <string name="question_six">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>


</resources>
