<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_quiz_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/ll_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"/>

    </LinearLayout>

    <Button
      android:id="@+id/cheat_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cheat_button"/>

    <LinearLayout
        android:id="@+id/ll_movement_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/access_prev"
            android:src="@drawable/arrow_left"
            android:drawablePadding="4dp"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/access_next"
            android:src="@drawable/arrow_right"
            android:drawablePadding="4dp"/>

    </LinearLayout>



</LinearLayout>